style.css
html {
    scroll-behavior: smooth;
}

::-moz-selection {
    background: #ff8e00;
}

::selection {
    background: #ff8e00;
}

body {
    font-family: "Roboto", sans-serif;
    background-image: linear-gradient(to right top, #193a6f, #173463, #152e57, #13284b, #112240);
    background-attachment: fixed;
    color: white;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

header {
    align-self: stretch;
}

ul {
    list-style-type: none;
}

section {
    margin-left: 1rem;
    margin-right: 1rem;

    display: flex;
    flex-direction: column;
}
section#profile {
    p {
        padding: 0 1.5rem;
        font-weight: bold;
        font-size: 1.25rem;
    }

    .location {
        display: flex;
        align-items: center;

        font-size: 1rem;
        font-weight: 400;
    }

    .p-content {
        display: flex;
    }

    .p-text {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }

    .p-list {

        border-left: 2px solid white;
        padding-left: 1rem;

        p {
            text-wrap: nowrap;
            padding-left: 0;
        }

        ul {
            padding-left: 0;
            display: flex;
            flex-direction: column;
        }

        li {
            padding: 0.5rem;
            border: 2px solid white;
            margin: 0.25rem;
            border-radius: 5px;
            transition: 200ms ease-out;
            &:hover{
                background-color: white;
                color:#112240;
            }
        }

        a {
            color: inherit;
            text-decoration: none;  
        }
    }
}

section#showcase {
    
    ul {
        padding: 0;
        display: flex;
        justify-content: center;
        gap: 1rem;
        flex-wrap: wrap;
    }

    li {
        border: 2px solid rgba(255, 255, 255, 0.25);
        border-radius: 20px;
        display: flex;
        flex-direction: column;
        align-items: center;
        background-color: rgba(0,0,0, 0.25);
        transition: 200ms ease-in-out;
        &:hover {
            border-color: white;
        }
    }

    p {
        max-width: calc(250px - 2rem);
        padding: 0 1rem;
    }

    li div {
        flex: 1;
        align-self: stretch;
        padding: 0 1rem 1rem 1rem;
        display: flex;
        justify-content: space-between;
        flex-direction: row;
        align-items: end;
    }

    a {
        color: inherit;
        text-decoration: none;
        display: block;
        padding: 0.5rem;
        background-color: rgba(255, 255, 255, 0.5);
        border-radius: 5px;
        transition: 200ms ease-out;
        &:hover {
            background-color: white;
            color: #112240;
        }
    }
}

section#experience {

    .jobs-container {
        display: flex;
        justify-content: center;
    }

    .joblist {
        padding-left: 0.5rem;
        max-width: 600px;
    }

    .job {
        position: relative;
        padding-top: 1rem;
        &:nth-last-child(n+2) {
            border-left: 3px solid white;
        }
        padding-bottom: 0.25rem;
        /* &:nth-last-child(2) {
            padding-bottom: 1.25rem;
        } */

        &:nth-last-child(1) {
            border-left: 3px solid white;
            border-bottom: 3px solid white;
            border-radius: 0 0 0 15px;
            h4 {padding-top: 3rem;}
            .time-container {margin-bottom: -3rem;}
            
        }
    }

    .job-description {
        padding-left: 2rem;
        border: none;
        list-style-type: disc;
        li {
            margin-bottom: 0.5rem;
        }
    }
    
    h4 {
        font-size: 2rem;
        margin-bottom: 0;
        margin-top: 0.125rem;
        margin-left: -3px;
        padding-left: 1rem;
        border-bottom: 3px solid white;
        border-left: 3px solid white;
        border-radius: 0 0 0 20px;
    }

    h5 {
        margin-left: 1rem;
        margin-top: 0.5rem;
        font-size: 1rem;
        span {
            i{
                font-size: 0.75rem;
            }
            font-weight: 300;
            font-size: 0.75rem;
        }
    }

    time {
        margin-left: 0.125rem;
    }

    .time-container {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin-left: 0.75rem;
        flex-wrap: wrap;
    }

    .connector {
        width: 10px;
        border: 2px solid white;
    }

    p {
        margin-bottom: 0;
        margin-left: 1rem;
    }
}

section#skills {

    h5 {
        font-size: 1.125rem;
    }

    .skillset {
        display: flex;
        justify-content: center;
        width: 100%;
        gap: 1rem;
        flex-wrap: wrap;
        padding-left: 0;
    }

    .skill {
        border: 3px solid white;
        border-radius: 15px;
        padding: 0.5rem;
        min-width: 200px;

        h5 {
            margin-top: 0;
        }

        ul {
            padding-left: 0;
        }

        li {
            background-color: rgba(255, 255, 255, 0.5);
            padding: 0.25rem 0.75rem 0.25rem 0.5rem;
            margin: 0.5rem 0;
            height: 50px;
            display: flex;
            align-items: center;
            img{
                margin-right:0.5rem;
            }
        }
    }
}

nav {
    
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgba(0,0,0, 0.25);
    ul{
        padding-right: 1rem;
        margin: 0;
        display: flex;
        justify-content: end;
        font-size: 1.25rem;
        
        li{
            display: block;
            border-style: solid;
            padding: 0.5rem;
            margin: 0.5rem;
            border-width: 0;
            cursor: pointer;
            transition: 150ms ease-out;
            border-bottom: 3px solid white;
            border-left: 3px solid white;
            border-radius: 0 0 0 10px;
            a{
                text-wrap: nowrap;
                display: block;
            }

            &:hover {
                background-color: white;
                color: #112240;
            }
        }
    }

    .logo {
        margin: 1rem;
    }
}

h1 {
    font-size: 5rem;
    margin: 0 0 0 0rem;
}



.sec-title {

    display: flex;
    div {
        display: flex;
        border-bottom: 3px solid #ff8e00;
        align-items: center;
        padding: 0.5rem 1rem;
    }
    span{
        margin: 1rem;
        color: #ff8e00;

        &.material-symbols-outlined {
        font-variation-settings:
        'FILL' 0,
        'wght' 800,
        'GRAD' 0,
        'opsz' 48
        }
    }

    h2 {
        flex-shrink: 1;
        font-size: 2.5rem;
        margin: 0;
    }
}

section:nth-child(odd) .sec-title div {
    border-right: 3px solid #ff8e00;
    border-radius: 0 0 20px 0;
}

section:nth-child(even) .sec-title {

    justify-content: end;
    
    div {
        border-left: 3px solid #ff8e00;
        border-radius: 0 0 0 20px;
        flex-direction: row-reverse;
    }
}

h3 {
    font-size: 2rem;
    margin: 0 0 0 2rem;
}


.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 48
}

.menu-button {

    z-index: 1;
    display: none;
    position: fixed;
    top: 15px;
    right: 15px;
    background-color: #112240;
    color: white;
    box-shadow: none;
    border: 2px solid white;
    width: 45px;
    height: 45px;
    border-radius: 5px;
    span{
        transition: 200ms ease-in-out;
    }
    &:hover span {
        transform: scale(1.5)
    }

    &:active{
        background-color: white;
        color: #112240;
    }
}

.close-button {
    display: none;
    background-color: transparent;
    border: none;
    color: white;
    padding: 5px;
    margin: 7px 5px 0 5px;
    border-radius: 5px;
    span{
        transition: 200ms ease-in-out;
        &:hover {
            transform: scale(1.3);
        }
    }

    &:active {
        background-color: white;
        color: #112240
    }
}

hr {
    display: none;
}

.logo {
    filter: invert()
}

.title-container {
    position: relative;
}

.title {
    z-index: 1;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: rgba(0,0,0, 0.75);
}
.image{
    padding: 3rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

@media (max-width: 720px) {
    body {
        position: relative;
    }
    nav {
        display: block;
        z-index: 2;
        transition: 300ms ease-in-out;
        position: fixed;
        background-color: #112240;
        height: 100%;
        top: 0;
        right: 0;
        width: 300px;
        transform: translate(300px);
        ul {
            background-color: transparent;
            flex-direction: column;
            padding: 0;
            li{
                border: none;
                margin: 0;
                border-radius: 0;
            };
        }
        img {
            display: none;
        }
    }

    .menu-button{
        display: block;
    }
    .close-button {
        display: block;
    }
    
    hr {
        display: block;
    }

    .shadow-box {
        z-index: -1;
        position: fixed;
        top: 0;
        left: 0;
        display: block;
        background-color: black;
        opacity: 0;
        width: 100%;
        height: 100%;
        transition: 200ms ease-in-out;
        /* -webkit-box-sizing: border-box;
        box-sizing: border-box; */
        max-width: 100vw;
    }

    h1 {
        font-size: 10vw;
    }

    .sec-title h2 {
        font-size: 7vw;
    }

    h3 {
        font-size: 5vw;
    }

    section#experience h4{
        font-size: 5vw;
    }

    .title-container {
        height: 100vh;
    }

    .image {
        height: 100%;
        img {
            width: 90%;
        }
    }

    section#profile {
        .p-content {
            flex-direction: column;
        }
        .p-list ul {
            flex-direction: row;
        }

        .p-list {
            border-left: 0;
        }
    }
}

.nav-button {
    color: inherit;
    text-decoration: none;
}

